@@ -4,8 +4,6 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 # ---
 
-skylib_version = "1.0.3"
-
 http_archive(
     name = "bazel_skylib",
     sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
@@ -136,8 +134,8 @@ maven_install(
     ],
 )
 
-# ---
-
 load("@maven//:defs.bzl", "pinned_maven_install")
 
 pinned_maven_install()
+
+# ---
