@@ -1,0 +1,3 @@
+config.stopBubbling = true
+lombok.accessors.fluent = true
+lombok.addNullAnnotations = checkerframework
