@@ -3,8 +3,8 @@ package de.melsicon.talk.value.composition.lombok;
 import com.google.errorprone.annotations.Immutable;
 import de.melsicon.talk.value.simple.lombok.Person;
 import lombok.Builder;
-import lombok.NonNull;
 import lombok.Value;
+import org.checkerframework.checker.nullness.qual.NonNull;
 
 @SuppressWarnings({
   "FieldMissingNullable",
@@ -12,13 +12,13 @@ import lombok.Value;
   "MultiVariableDeclaration",
   "NullAway",
   "ParameterName",
+  "UnnecessarilyFullyQualified",
   "Var",
 })
 @Immutable
 @Builder
 @Value
 public class SoldMovieTicket {
-  // This needs to be the Lombok annotation
   @NonNull MovieTicket ticket;
 
   @NonNull Person owner;
