@@ -1,6 +1,6 @@
 package de.melsicon.talk.value.simple.immutables;
 
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import com.google.errorprone.annotations.Immutable;
 import java.util.Arrays;
 import java.util.List;
@@ -40,7 +40,7 @@ public abstract class Person {
   /**
    * Email addresses this person is reachable under.
    *
-   * @return An immutable list of email addresses
+   * @return An immutable set of email addresses
    */
   public abstract List<EmailAddress> email();
 
@@ -56,7 +56,7 @@ public abstract class Person {
      */
     public final ImmutablePerson.Builder addEmail(String... email) {
       return addAllEmail(
-          Arrays.stream(email).map(EmailAddress::of).collect(ImmutableList.toImmutableList()));
+          Arrays.stream(email).map(EmailAddress::of).collect(ImmutableSet.toImmutableSet()));
     }
   }
 }
