@@ -1,11 +1,11 @@
 package de.melsicon.talk.value.simple.record;
 
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import java.util.Objects;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 /** Representation of a person. */
-public record Person(String givenName, @Nullable String surname, ImmutableList<EmailAddress> email) {
+public record Person(String givenName, @Nullable String surname, ImmutableSet<EmailAddress> email) {
   /**
    * Creates a Person.
    *
